src/sass/60_components/_components.dialog.scss
.c-dialog {
  $c-dialog: &;

  position: fixed;
  background: var(--oo-color-bg);
  z-index: 50000;
  margin: auto;
  padding: 0;
  overflow: hidden;
  overflow-y: auto;
  border: 0;
  max-width: calc(100vw - 2rem);
  max-height: calc(100dvh - 2rem);
  box-shadow: 0 0 5px var(--oo-color-transparent-shadow-15);
  outline: $outline;
  outline-offset: $outline-offset;

  @include media-breakpoint-up(lg) {
    min-width: 600px;
    max-width: 50vw;
    width: auto;
  }

  @include focus-visible() {
    outline-color: var(--oo-color-primary);
  }

  &::backdrop {
    cursor: pointer;
    background: var(--oo-color-transparent-shadow-80);
  }

  &__wrapper {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 2rem;
  }

  &__header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    align-items: flex-start;
    gap: 1rem;
    padding: 0.5rem 0.5rem 0 1rem;
  }

  &__title {
    @include font-size($mobile-h4-font-size, $mobile-h4-line-height);
    font-weight: $font-weight-headline;

    @include media-breakpoint-up(xl) {
      @include font-size($desktop-h4-font-size, $desktop-h4-line-height);
    }
  }

  &__close {
    flex-shrink: 0;
  }

  &__content {
    padding: 0 1rem 2rem;
  }

  &.--is-form {
    height: 80%;
    width: 80%;

    @include media-breakpoint-up(lg) {
      width: 60vw;
      max-width: none;
      height: 80vh;
    }

    #{$c-dialog}__header {
      padding: 2.5rem 2.5rem 0 2.5rem;
      justify-content: space-between;
      align-items: flex-start;
    }

    #{$c-dialog}__title {
      color: var(
        --oo-color-headline,
        --oo-color-text
      ); // Temporarily until customer area styles are not overridden

      hyphens: auto;
      text-wrap-style: balance;
      word-break: break-word;

      @include media-breakpoint-up(sm) {
        hyphens: manual;
      }
    }

    #{$c-dialog}__content {
      padding: 0 2.5rem 2rem;
    }
  }
}

.c-dialog.--team-dialog {
  max-width: 100vw;
  width: 100vw;
  max-height: calc(100vh - 80px);
  margin-top: 40px;
  margin-bottom: 40px;

  @include media-breakpoint-up(md) {
    max-width: calc(100vw - 2rem);
    width: unset;
    max-height: calc(100dvh - 2rem);
    margin: auto
  }

  @include media-breakpoint-up(lg) {
    max-width: 80vw;
  }

  @include media-breakpoint-up(xl) {
    max-width: 60vw;
  }

  .c-dialog__content {
    padding: 0;
  }

  .c-dialog__close {
    background-color: transparent;
  }
}

